update title to reflect current profession

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <img src="./img/DP Shashi.jpg"
                         alt="">
                 </div>
-                <h2>Shashi Bhushan Kumar<br><span>Pakistani poet and writer</span></h2>
+                <h2>Shashi Bhushan Kumar<br><span>Web Developer</span></h2>
             </div>
 
             <div class="contactInfo">
