update contact information links and styles

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
                 <ul>
                     <li>
                         <span class="icon"><i class="fa fa-phone" aria-hidden="true"></i></span>
-                        <span class="text">+91 829 4507 785</span>
+                        <a href="tel:+918294507785"><span class="text">+91 829 4507 785</span></a>
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-envelope" aria-hidden="true"></i></span>
-                        <span class="text">shashi.bkumar21@gmail.com</span>
+                        <a href="mailto:shashi.bkumar21@gmail.com"><span class="text">shashi.bkumar21@gmail.com</span></a>
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-globe" aria-hidden="true"></i></span>
@@ -39,11 +39,13 @@
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-linkedin-square" aria-hidden="true"></i></span>
-                        <span class="text">www.linkedin.com/me</span>
+                        <a href="https://www.linkedin.com/in/shashi-bhushan-kumar-9b25a12b1/"><span class="text">www.linkedin.com/in/shashi-dev/</span></a>
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></span>
-                        <span class="text">Araria Bihar India</span>
+                       
+                        <a href="https://www.google.co.in/maps/place/Narpatganj,+Bihar/@26.3364984,87.0946741,15z/data=!3m1!4b1!4m6!3m5!1s0x39efa6fd970ebc69:0x87ca0de93f7c8a36!8m2!3d26.3342129!4d87.1048702!16s%2Fm%2F05q3thk?entry=ttu&g_ep=EgoyMDI1MDMyNS4xIKXMDSoASAFQAw%3D%3D"> 
+                            <span class="text">Araria Bihar India</span></a>
                     </li>
                 </ul>
             </div>
