--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-globe" aria-hidden="true"></i></span>
-                        <span class="text">www.mywebsite.com</span>
+                        <a href="#"><span class="text">www.mywebsite.com</span></a>
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-linkedin-square" aria-hidden="true"></i></span>
