refactor layout and styles in index.html and style.css; add project descriptions and links

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
         <div class="left_Side">
             <div class="profileText">
                 <div class="imgBx">
-                    <img src="./img/DP Shashi.jpg"
-                        alt="">
+                    <img src="./img/DP Shashi.jpg" alt="">
                 </div>
                 <h2>Shashi Bhushan Kumar<br><span>Web Developer</span></h2>
             </div>
@@ -31,7 +30,8 @@
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-envelope" aria-hidden="true"></i></span>
-                        <a href="mailto:shashi.bkumar21@gmail.com"><span class="text">shashi.bkumar21@gmail.com</span></a>
+                        <a href="mailto:shashi.bkumar21@gmail.com"><span
+                                class="text">shashi.bkumar21@gmail.com</span></a>
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-globe" aria-hidden="true"></i></span>
@@ -39,12 +39,14 @@
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-linkedin-square" aria-hidden="true"></i></span>
-                        <a href="https://www.linkedin.com/in/shashi-bhushan-kumar-9b25a12b1/"><span class="text">www.linkedin.com/in/shashi-dev/</span></a>
+                        <a href="https://www.linkedin.com/in/shashi-bhushan-kumar-9b25a12b1/"><span
+                                class="text">www.linkedin.com/in/shashi-dev/</span></a>
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></span>
-                       
-                        <a href="https://www.google.co.in/maps/place/Narpatganj,+Bihar/@26.3364984,87.0946741,15z/data=!3m1!4b1!4m6!3m5!1s0x39efa6fd970ebc69:0x87ca0de93f7c8a36!8m2!3d26.3342129!4d87.1048702!16s%2Fm%2F05q3thk?entry=ttu&g_ep=EgoyMDI1MDMyNS4xIKXMDSoASAFQAw%3D%3D"> 
+
+                        <a
+                            href="https://www.google.co.in/maps/place/Narpatganj,+Bihar/@26.3364984,87.0946741,15z/data=!3m1!4b1!4m6!3m5!1s0x39efa6fd970ebc69:0x87ca0de93f7c8a36!8m2!3d26.3342129!4d87.1048702!16s%2Fm%2F05q3thk?entry=ttu&g_ep=EgoyMDI1MDMyNS4xIKXMDSoASAFQAw%3D%3D">
                             <span class="text">Araria Bihar India</span></a>
                     </li>
                 </ul>
@@ -102,12 +104,13 @@
         <div class="right_Side">
             <div class="about">
                 <h2 class="title2">Profile</h2>
-                <p>Enthusiastic Computer Science Engineering student with a 
-                    strong grasp of Data Structures and Algorithms (DSA) and 
-                    hands-on experience in web development. Passionate about 
-                    problem-solving and building scalable applications. Seeking an 
-                    internship/full-time opportunity to apply my technical skills, 
-                    enhance my learning, and contribute to impactful projects in a dynamic and collaborative environment</p>
+                <p>Enthusiastic Computer Science Engineering student with a
+                    strong grasp of Data Structures and Algorithms (DSA) and
+                    hands-on experience in web development. Passionate about
+                    problem-solving and building scalable applications. Seeking an
+                    internship/full-time opportunity to apply my technical skills,
+                    enhance my learning, and contribute to impactful projects in a dynamic and collaborative environment
+                </p>
             </div>
 
             <div class="about">
@@ -115,11 +118,12 @@
                 <div class="box">
                     <div class="year_company">
                         <h5>Fresher</h5>
-                        <h5>Not yet Company</h5>
+                        <!-- <h5>Not yet Company</h5> -->
                     </div>
                     <div class="text">
                         <h4>Web Development Intern</h4>
-                        <p>Web Development Intern role and demonstrate a strong foundation in both front-end and back-end technologies. </p>
+                        <p>Web Development Intern role and demonstrate a strong foundation in both front-end and
+                            back-end technologies. </p>
                     </div>
                 </div>
             </div>
@@ -155,19 +159,19 @@
                     <div class="percent">
                         <div style="width: 60%;"></div>
                     </div>
-                </div> 
+                </div>
                 <div class="box">
                     <h4>locomotive</h4>
                     <div class="percent">
                         <div style="width: 50%;"></div>
                     </div>
-                </div> 
+                </div>
                 <div class="box">
                     <h4>React</h4>
                     <div class="percent">
                         <div style="width: 60%;"></div>
                     </div>
-                </div> 
+                </div>
                 <div class="box">
                     <h4>Node Js</h4>
                     <div class="percent">
@@ -200,8 +204,48 @@
                 </div>
             </div>
 
+            <div class="about">
+                <h2 class="title2">Project</h2>
+                <div class="box">
+                    <div class="year_company">
+                        <h5>Weather</h5>
+                        <h5>Description </h5>
+                    </div>
+                    <div class="text">
+                        <a href="https://shashibhushan21.github.io/weather/">(Link)</a>
+                        <p>Get real-time weather updates with our Weather App! Check current conditions, forecasts, and
+                            more, all in one place. </p>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <div class="year_company">
+                        <h5>Education Consultant</h5>
+                        <h5>Description </h5>
+                    </div>
+                    <div class="text">
+                        <a href="https://educare-three.vercel.app/">(Link)</a>
+                        <p>This is real-time Project. and It is a responsive website that auto-refreshes the quotes
+                            after a few minutes.</p>
+                    </div>
+                </div>
+
+                
+                <div class="box">
+                    <div class="year_company">
+                        <h5>Day Tour Guide</h5>
+                        <h5>Description </h5>
+                    </div>
+                    <div class="text">
+                        <a href="https://trip-hazel.vercel.app/">(Link)</a>
+                        <p>This is real-time Project. and It is a responsive website that auto-refreshes the quotes
+                            after a few minutes.</p>
+                    </div>
+                </div>
+            </div>
+
             <div class="about intrest">
-                <h2 class="title2">intrest</h2>
+                <h2 class="title2">interest</h2>
                 <ul>
                     <li><i class="fa fa-gamepad" aria-hidden="true"></i>Gaming</li>
                     <li><i class="fa fa-pencil-square" aria-hidden="true"></i>Writing</li>
